k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: psihoterapija-ikar-ingress
  namespace: prod
  labels:
    app: psihoterapija-ikar
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    cert-manager.io/acme-challenge-type: "http01"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/hsts: "true"
    nginx.ingress.kubernetes.io/hsts-max-age: "31536000"
    nginx.ingress.kubernetes.io/enable-gzip: "true"
    nginx.ingress.kubernetes.io/enable-brotli: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - psihoterapija-ikar.rs
      secretName: psihoterapija-ikar-tls
  rules:
    - host: psihoterapija-ikar.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: psihoterapija-ikar
                port:
                  number: 80
